chore: idea 폴더 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,git,java,gradle,intellij,maven:
+.idea/
